--- a/styles.css
+++ b/styles.css
@@ -28,12 +28,19 @@ body {
 }
 header i {
   cursor: pointer;
-  font-size: 30px;
+  font-size: 0px;
   margin-right: 8px;
 }
+.wrapper.active header i {
+  font-size: 30px;
+  margin-left: 5px;
+}
+
 .wrapper .input-part {
-  display: none;
   margin: 20px 25px 30px;
+}
+.wrapper.active .input-part {
+  display: none;
 }
 .input-part .info-txt {
   display: none;
@@ -44,11 +51,13 @@ header i {
   margin-bottom: 15px;
 }
 .info-txt.error {
+  display: flex;
   color: #721c34;
   background: #f8d7da;
   border-color: 1px solid #f5c6cb;
 }
 .info-txt.pending {
+  display: flex;
   color: #0c5460;
   background: #d1ecf1;
   border-color: 1px solid #bee5eb;
@@ -88,4 +97,76 @@ header i {
   color: #ffff;
   cursor: pointer;
   background: #43affc;
+}
+.wrapper .weather-part {
+  margin: 30px 0 0;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.wrapper.active .weather-part {
+  display: flex;
+}
+.weather-part img {
+  max-width: 125px;
+}
+.weather-part .temp {
+  display: flex;
+  font-size: 72px;
+  font-weight: 500;
+}
+.weather-part .temp .numb {
+  font-weight: 600;
+}
+.weather-part .temp .deg {
+  font-size: 40px;
+  margin: 10px 5px 0 0;
+  display: block;
+}
+.weather-part .location {
+  display: flex;
+  align-items: center;
+  font-size: 21px;
+  margin-bottom: 30px;
+}
+.location i {
+  font-size: 22px;
+  margin-right: 5px;
+}
+.weather-part .bottom-details {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  border-top: 1px solid #bfbfbf;
+  justify-content: space-between;
+}
+.bottom-details .column {
+  width: 100%;
+  display: flex;
+  padding: 15px 0;
+  align-items: center;
+  justify-content: center;
+}
+.column i {
+  color: #43affc;
+  font-size: 40px;
+}
+.column.humidity {
+  border-left: 1px solid #bfbfbf;
+}
+.details .temp,
+.humidity span {
+  font-size: 18px;
+  margin-right: 500;
+  margin-top: -3px;
+}
+.details .temp .deg {
+  margin: 0;
+  font-size: 17px;
+  padding: 0 2px 0 1px;
+}
+.details p {
+  font-size: 14px;
+  margin-top: -6px;
 }
